--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 
 
             </div>
+            <div id="player-chips" class="col-2">
+
+            </div>
             <div id="player-bj" class="bjin" style="display:none;"><img src="images/bj.svg"></div>
         </div>
         <div class="row">
@@ -81,7 +84,7 @@
                 <div class="modal-body">
                     <p>Place A Bet</p>
                     <label for="customRange3" s>Amount $</label>
-                    <input type="range" class="custom-range" step="0.50" id="betRange">
+                    <input type="range" class="custom-range" step="10" id="betRange">
                     $<input type="number" id="rangtext" value="10.00">
                 </div>
 
@@ -99,6 +102,7 @@
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
     </script>
+    <script src="js/chips.js"></script>
     <script src="js/decks.js"></script>
     <script src="js/player.js"></script>
     <script src="js/deck_objbased.js"></script>
